fix: spacing on desktop form (#22)

--- a/src/components/loginForm/login-form.less
+++ b/src/components/loginForm/login-form.less
@@ -68,7 +68,7 @@
   }
 
   .text-register {
-    margin-top: 14px;
+    margin: 14px 0;
   }
 }
 
@@ -85,6 +85,20 @@
           content: "";
         }
       }
+    }
+    .ant-divider-horizontal {
+      margin: 10px 0;
+    }
+    .text-forgot-password {
+      margin-top: 10px;
+
+      &:hover {
+        color: @primary-color;
+      }
+    }
+
+    .text-register {
+      margin-top: 7px;
     }
   }
 }
