--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -21,7 +21,9 @@
   }
   .login-main {
     background-color: white;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .login-title {
       font-size: 36px;
       text-align: center;
